# switch_bot

./: .gitignore  =0.18.0  =2.8.0  TEMA 10 - CREES ESTO.drp  TEMA 10 - CREES ESTO_edl.edl  digram.html  pyproject.toml  run_gui.py
.kiro/hooks/: ui-coherence-check.kiro.hook  ui-design-review.kiro.hook  ui-new-file-review.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: performance.md  python-conventions.md  security.md  ui-design-system.md
switch_bot/: __init__.py  coordinator.py
switch_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
switch_bot/capture/: __init__.py  capture_manager.py
switch_bot/engines/: __init__.py  decision_engine.py  hysteresis_filter.py  panic_button.py  script_parser.py  session_manager.py  vocal_anomaly_detector.py
switch_bot/gui/: __init__.py  ad_suggestions_dialog.py  bedrock_config_panel.py  collapsible_panel.py  credentials.py  gui_bridge.py  local_models_panel.py  main_window.py  status_badge.py  theme.py  widgets.py
switch_bot/ia/: __init__.py  backend_base.py  backend_config.py  bedrock_backend.py  enrichment_result.py  ia_enricher.py  local_backend.py  model_catalog.py
switch_bot/inference/: __init__.py  inference_engine.py
switch_bot/models/: __init__.py  config.py  enums.py  inference.py  payload.py  timecode.py
switch_bot/pipelines/: __init__.py  atem_pipeline.py  base.py  dispatcher.py  edl_pipeline.py  metadata_pipeline.py  obs_pipeline.py
switch_bot/serializers/: __init__.py  drp_serializer.py  edl_serializer.py
switch_bot/web/: __init__.py  agent_client.py  (+8 more)
tests/: conftest.py  test_coordinator.py
(+68 files in other folders)
