[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "switch-bot"
version = "0.1.0"
description = "Orquestador de producción multicámara en tiempo real con inferencia visual y análisis semántico"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.0",
    "pyatemmax>=1.0b1",
    "boto3>=1.28.0",
    "PyQt6>=6.5.0",
    "obs-websocket-py>=1.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["switch_bot*"]
